Initial checking of RTZ files. Single and multiple files. RTZ schema 1.0 built in. Size check.

--- a/src/rtz/rtz/Properties/launchSettings.json
+++ b/src/rtz/rtz/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "rtz": {
       "commandName": "Project",
-      "commandLineArgs": "-unzip \"\\\\cleopatra\\chersoft\\nautical\\cirm\\rtztestfiles\\rtz_files\\attachmenttest\\rtz_with_attachments.rtzp\""
+      "commandLineArgs": "-check \"\\\\cleopatra\\chersoft\\Nautical\\CIRM\\RTZTestFiles\\rtz_files\" e:\\testing\\multireport.txt"
     }
   }
 }
