--- a/src/rtz/rtz/rtz.csproj
+++ b/src/rtz/rtz/rtz.csproj
@@ -5,4 +5,28 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Properties\RTZ Schema version 1_0.xsd" />
+    <None Remove="RTZ Schema version 1_0.xsd" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Properties\RTZ Schema version 1_0.xsd" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
