Includes a default waypoint route, some thinking about errors to include, more checks

--- a/src/rtz/rtz/Properties/launchSettings.json
+++ b/src/rtz/rtz/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "rtz": {
       "commandName": "Project",
-      "commandLineArgs": "-check \"c:\\github\\rtz\\samplefiles\\alloptionalelements\\rtz10alloptional.rtz\" "
+      "commandLineArgs": "-check c:\\github\\rtz\\samplefiles\\defaultwaypoint\\defaultwaypoint.rtz "
     }
   }
 }
