--- a/src/rtz/rtz/Properties/launchSettings.json
+++ b/src/rtz/rtz/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "rtz": {
       "commandName": "Project",
-      "commandLineArgs": "-check c:\\github\\rtz\\samplefiles"
+      "commandLineArgs": "-check ..\\..\\..\\..\\..\\..\\samplefiles -terse"
     }
   }
 }
