* Removed negative "losses" e.g. windLoss as noncompliant with schema * Adjusted time windows to be more like xsd:time but some way to go on that * Renamed occurrances of planSpeedMin and planSpeedMax to merely speedMin and speedMax to fit with schema (involved remaking rtzp samples)

--- a/src/rtz/rtz/Properties/launchSettings.json
+++ b/src/rtz/rtz/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "rtz": {
       "commandName": "Project",
-      "commandLineArgs": "-check ..\\..\\..\\..\\..\\..\\samplefiles -terse"
+      "commandLineArgs": "-check ..\\..\\..\\..\\..\\..\\samplefiles"
     }
   }
 }
