Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     command: 'publish'
     publishWebProjects: false
     projects: '**/*.csproj'
-    arguments: '-c Release -o $(Build.ArtifactStagingDirectory)'
+    arguments: '-c Release -o $(Build.ArtifactStagingDirectory) -r win-x86 --no-self-contained'
 
 - task: PublishBuildArtifacts@1
   inputs:
