Lower case z in datetime is a validation failure if schema validated using Xerces

--- a/src/rtz/rtz/Properties/launchSettings.json
+++ b/src/rtz/rtz/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "rtz": {
       "commandName": "Project",
-      "commandLineArgs": "-check ..\\..\\..\\..\\..\\..\\samplefiles"
+      "commandLineArgs": "-check C:\\GitHub\\RTZ\\SampleFiles\\"
     }
   }
 }
